--- a/kube-cross/Dockerfile
+++ b/kube-cross/Dockerfile
@@ -1,3 +1,3 @@
-FROM k8s.gcr.io/build-image/kube-cross:v1.15.12-legacy-1
+FROM k8s.gcr.io/build-image/kube-cross:v1.16.4-1
 
 MAINTAINER zhengwei <mail.zhengwei@qq.com>
