--- a/debian-iptables/Dockerfile
+++ b/debian-iptables/Dockerfile
@@ -1,3 +1,3 @@
-FROM k8s.gcr.io/build-image/debian-iptables:v12.1.2
+FROM k8s.gcr.io/build-image/debian-iptables:buster-v1.6.0
 
 MAINTAINER zhengwei <mail.zhengwei@qq.com>
